// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package settings;

import "google/protobuf/duration.proto";

// ProjectConfig is the project-specific configuration settings for this
// service.
message ProjectConfig {
  // The title of this project, as it shows up in "All Views".
  string title = 1;
  // Map of view entries for this project.
  map<string, View> view = 2;
}

// Trinary is a trinary value.
enum Trinary {
  UNSPECIFIED = 0;
  YES = 1;
  NO = 2;
}

// View defines a specific build set view.
message View {
  // The view title. If empty, a title will be generated.
  string title = 1;

  // Represents a "key:value" BuildBucket tag.
  //
  // The <value> may be specified as a "CalculatedValue", in which case it will
  // be calculated and substituted at query time.
  message Tag {
    // The tag's key.
    string key = 1;

    // Sentinel for tag values that can be calculated.
    enum CalculatedValue {
      // Empty value (default).
      EMPTY = 0;

      // The latest paladin build's master build ID.
      LATEST_PALADIN_BUILD = 1;
      // The latest PFQ build's master build ID.
      LATEST_PFQ_BUILD = 2;
      // The latest Canary build's master build ID.
      LATEST_CANARY_BUILD = 3;
      // The latest Release build's master build ID.
      LATEST_RELEASE_BUILD = 4;
      // The latest Toolchain build's master build ID.
      LATEST_TOOLCHAIN_BUILD = 5;
    }

    oneof tagval {
      string value = 2;
      CalculatedValue calc = 3;
    }
  }

  // A Section is an individual BuildBucket query that will be represented as
  // a section in this view.
  message Section {
    // The name of this section. If omitted, one will be generated.
    string name = 1;
    // (Required) The BuildBucket bucket to query.
    repeated string bucket = 2;
    // BuildBucket tags to query on. Will be constructed as "key:value".
    repeated Tag tag = 3;

    // The BuildBucket tag whose value should be used as the title for each
    // build entry in this view. If empty, the title will be generated.
    repeated string title_tag = 4;
    // The BuildBucket tag keys to use to sort builds in this view. If omitted,
    // the BuildBucket ID will be used.
    repeated string sort_tag = 5;

    // Information to show in the build's description.
    message Show {
      enum Info {
        NONE = 0;
        STATUS = 1;
        FAILURE_REASON = 2;
      }

      oneof what {
        string tag = 1;
        Info info = 2;
      }
    }
    // Tags whose values should be shown when rendering the view.
    repeated Show show = 6;

    // Constrain to the specified Result.
    enum Result {
      ALL = 0;
      SUCCESS = 1;
      CANCELED = 2;
      FAILURE = 3;
      BUILDBUCKET_FAILURE = 4;
      BUILD_FAILURE = 5;
      INFRA_FAILURE = 6;
      INVALID_BUILD_DEFINITION = 7;
    }
    Result result = 8;

    // The maximum number of builds to retrieve. If empty, builds will be pulled
    // up to an app-defined maximum.
    int32 max_builds = 9;

    // If true, show canary builds.
    Trinary canary = 10;
  }
  // The set of BuildBucket queries to represent in this view.
  repeated Section section = 2;

  // If >0, make this view automatically refresh itself every interval.
  google.protobuf.Duration refresh_interval = 3;
}
